--- a/PIAOnlineForm/PIAOnlineForm.vbproj
+++ b/PIAOnlineForm/PIAOnlineForm.vbproj
@@ -92,6 +92,8 @@
     <Import Include="System.Web.UI.HtmlControls" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="additional-file\css\global.css" />
+    <Content Include="additional-file\img\5044328.jpg" />
     <Content Include="AgreementForm.aspx" />
     <Content Include="bootstrap4\css\bootstrap-grid.css" />
     <Content Include="bootstrap4\css\bootstrap-grid.min.css" />
