--- a/PIAOnlineForm/PIAOnlineForm.vbproj
+++ b/PIAOnlineForm/PIAOnlineForm.vbproj
@@ -95,6 +95,7 @@
     <Content Include="additional-file\css\agreement.css" />
     <Content Include="additional-file\css\global.css" />
     <Content Include="additional-file\css\mainform.css" />
+    <Content Include="additional-file\css\regist.css" />
     <Content Include="additional-file\img\5044328.jpg" />
     <Content Include="additional-file\img\alex-fxrwJGMCz_g-unsplash.jpg" />
     <Content Include="additional-file\img\dark-blue-evening-rl-1366x768.jpg" />
