--- a/PIAOnlineForm/PIAOnlineForm.vbproj
+++ b/PIAOnlineForm/PIAOnlineForm.vbproj
@@ -98,6 +98,7 @@
     <Content Include="additional-file\css\mainpage.css" />
     <Content Include="additional-file\css\regist.css" />
     <Content Include="additional-file\img\simple-1655089829591-3169.jpg" />
+    <Content Include="ApprovalInitiator.aspx" />
     <Content Include="bootstrap4\css\bootstrap-grid.css" />
     <Content Include="bootstrap4\css\bootstrap-grid.min.css" />
     <Content Include="bootstrap4\css\bootstrap-reboot.css" />
@@ -126,6 +127,13 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApprovalInitiator.aspx.designer.vb">
+      <DependentUpon>ApprovalInitiator.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ApprovalInitiator.aspx.vb">
+      <DependentUpon>ApprovalInitiator.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
     <Compile Include="DirectorAgreement.aspx.designer.vb">
       <DependentUpon>DirectorAgreement.aspx</DependentUpon>
     </Compile>
