--- a/PIAOnlineForm/PIAOnlineForm.vbproj
+++ b/PIAOnlineForm/PIAOnlineForm.vbproj
@@ -99,8 +99,7 @@
     <Content Include="additional-file\css\mainpage.css" />
     <Content Include="additional-file\css\regist.css" />
     <Content Include="additional-file\img\abstract-pastel-blue-paint-brushstroke-textured-background.jpg" />
-    <Content Include="additional-file\img\alex-fxrwJGMCz_g-unsplash.jpg" />
-    <Content Include="additional-file\img\v1013-p-0001a.jpg" />
+    <Content Include="additional-file\img\Untitled40_20220628100742.jpeg" />
     <Content Include="additional-file\img\WhatsApp Image 2022-06-23 at 9.24.09 AM.jpeg" />
     <Content Include="ApprovalInitiator.aspx" />
     <Content Include="bootstrap4\css\bootstrap-grid.css" />
