--- a/PIAOnlineForm/PIAOnlineForm.vbproj
+++ b/PIAOnlineForm/PIAOnlineForm.vbproj
@@ -94,13 +94,13 @@
   <ItemGroup>
     <Content Include="additional-file\css\agreement.css" />
     <Content Include="additional-file\css\approval.css" />
-    <Content Include="additional-file\css\global.css" />
+    <Content Include="additional-file\css\fulldata.css" />
+    <Content Include="additional-file\css\login.css" />
     <Content Include="additional-file\css\mainform.css" />
     <Content Include="additional-file\css\mainpage.css" />
     <Content Include="additional-file\css\regist.css" />
     <Content Include="additional-file\img\abstract-pastel-blue-paint-brushstroke-textured-background.jpg" />
-    <Content Include="additional-file\img\Untitled40_20220628100742.jpeg" />
-    <Content Include="additional-file\img\WhatsApp Image 2022-06-23 at 9.24.09 AM.jpeg" />
+    <Content Include="additional-file\img\Untitled45_20220704155154.jpg" />
     <Content Include="ApprovalInitiator.aspx" />
     <Content Include="bootstrap4\css\bootstrap-grid.css" />
     <Content Include="bootstrap4\css\bootstrap-grid.min.css" />
@@ -128,7 +128,6 @@
     <Content Include="PresidentDirAgreeement.aspx" />
     <Content Include="ProcceedForm.aspx" />
     <Content Include="Web.config" />
-    <Content Include="WhatsApp Image 2022-06-23 at 9.24.09 AM.jpeg" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApprovalInitiator.aspx.designer.vb">
